templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: membership
  name: membership
spec:
  replicas: 1
  selector:
    matchLabels:
      app: membership
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: membership
    spec:
      containers:
      - image: harbor.wbl.com/fitness/membership:BLDID230114-222743
        name: membership
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-seoul
        resources: {}
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
          type: ""
        name: tz-seoul
status: {}
---
