templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: membership
  name: membership
spec:
  ports:
  - name: http-svc
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: membership
  type: NodePort
status:
  loadBalancer: {}
---
